--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,6 +5,7 @@
     <title>About</title>
     <link rel="stylesheet" href="/stylesheets/about.css">
     <link rel="stylesheet" href="/stylesheets/bootstraplight.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=0.8">
 </head>
 <body style="font-family: 'Courier New'">
 <div>
