--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>News!</title>
     <meta name="description"
-          content="Summarized News from the most popular and relevant news articles aggregated from the web in real time just for you.">
+          content="Fast News gives you summarized news from the most popular and relevant news articles aggregated from the web in real time just for you.">
     <meta name="keywords"
-          content="news, summarize, summarizer, summarized, aggregator, india, worldnews, technology, science">
+          content="fastnews, fast, news, summarize, summarizer, summarized, aggregator, india, worldnews, technology, science">
     <meta name="robots" content="index, follow">
+    <meta name="author" content="Salmaan Pehlari">
     <meta name="revisit-after" content="1 day">
     <meta name="language" content="english">
 
