changes to html

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -49,7 +49,7 @@
             information while many are just clickbaity headlines with just fluff in them.
         </p>
         <p align="justify">
-            The first problem is what to actually read among these news articles. Instead of spending finding articles
+            The first problem is what to actually read among these news articles. Instead of spending time finding articles
             to
             read, the app presents you curated articles popular on the web with a good amount of discussion already in
             place
@@ -73,7 +73,7 @@
         <p align="justify">
             A Python script supervised by supervisord on the server instance runs 24x7 aggregating popular news articles
             from the
-            web. It summarizes the articles and adds it to a mongoDB collection. The script can be found here.
+            web. It summarizes the articles and adds it to a mongoDB collection. The script can be found <a href="https://github.com/SalmaanP/news_backend">here</a>.
         </p>
 
         <p align="justify">
