--- a/views/index.ejs
+++ b/views/index.ejs
@@ -248,7 +248,7 @@
             and Summarizer made just for you.
         </div>
         <div class="col-md-4" align="right">
-            Contact him at <a href="mailto:salmaanpehlari@gmail.com">salmaanpehlari[at]gmail[dot]com</a>.
+            Contact him at salmaanpehlari[at]gmail[dot]com.
             <br><br>
         </div>
 
