--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,14 @@
     <meta name="language" content="english">
 
     <link rel="stylesheet" href="/stylesheets/jquery.remodal.css">
+
+    <% if(theme === 'light'){ %>
     <link id="csstheme" href="/stylesheets/bootstraplight.min.css" rel="stylesheet">
+    <% } else{ %>
+    <link id="csstheme" href="/stylesheets/bootstrapdark.min.css" rel="stylesheet">
+    <% } %>
+
+
     <link href="/stylesheets/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
@@ -62,7 +69,7 @@
                 <div class="form-group"><input type="text" placeholder="Search" ng-model="searchString"
                                                class="form-control" name="submit">
                 </div>
-                <button ng-click="search(category, searchString)" type="submit" class="btn btn-default">Search</button>
+                <button ng-click="search(category, searchString, 1)" type="submit" class="btn btn-default">Search</button>
 
             </form>
         </ul>
@@ -83,8 +90,8 @@
             <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Theme<strong
                             class="caret"></strong></a>
                 <ul class="dropdown-menu">
-                    <li><a href="#" onclick="lightmode()">Light</a></li>
-                    <li><a href="#" onclick="darkmode()">Dark</a></li>
+                    <li><a href="#" ng-click="setTheme('light')">Light</a></li>
+                    <li><a href="#" ng-click="setTheme('dark')">Dark</a></li>
                 </ul>
             </li>
         </ul>
@@ -116,19 +123,32 @@
 <!--CONTENT, contains pagination footer also-->
 <div id="mainContent" class="container" ng-show="hasContent && !loading">
 
+    <!--<ul class="pager">-->
+        <!--<div class="row clearfix">-->
+            <!--<div class="col-md-6 column" align="left" ng-if="pageNo > 1">-->
+                <!--<li><a href="#nav" ng-click="getData(category, pageNo-1, 'right')">Prev</a></li>-->
+
+
+            <!--</div>-->
+            <!--<div class="col-md-6 column" align="right" ng-if="NumRows != 0">-->
+                <!--<li><a href="#nav" ng-click="getData(category, pageNo+1)">Next</a></li>-->
+
+            <!--</div>-->
+        <!--</div>-->
+    <!--</ul>-->
+
     <ul class="pager">
         <div class="row clearfix">
             <div class="col-md-6 column" align="left" ng-if="pageNo > 1">
-                <li><a href="#nav" ng-click="getData(category, pageNo-1, 'right')">Prev</a></li>
-
+                <li><a href="#nav" ng-click="pagination(isSearch, category, pageNo-1, searchString, 'right')">Prev</a></li>
 
             </div>
             <div class="col-md-6 column" align="right" ng-if="NumRows != 0">
-                <li><a href="#nav" ng-click="getData(category, pageNo+1)">Next</a></li>
-
+                <li><a href="#nav" ng-click="pagination(isSearch, category, pageNo+1, searchString)">Next</a></li>
             </div>
         </div>
     </ul>
+
 
 
     <div class="row clearfix" ng-repeat="row in content track by $index" ng-if="$index % 3 == 0">
@@ -153,13 +173,11 @@
     <ul class="pager">
         <div class="row clearfix">
             <div class="col-md-6 column" align="left" ng-if="pageNo > 1">
-                <li><a href="#nav" ng-click="getData(category, pageNo-1, 'right')">Prev</a></li>
-
+                    <li><a href="#nav" ng-click="pagination(isSearch, category, pageNo-1, searchString, 'right')">Prev</a></li>
 
             </div>
             <div class="col-md-6 column" align="right" ng-if="NumRows != 0">
-                <li><a href="#nav" ng-click="getData(category, pageNo+1)">Next</a></li>
-
+                <li><a href="#nav" ng-click="pagination(isSearch, category, pageNo+1, searchString)">Next</a></li>
             </div>
         </div>
     </ul>
@@ -267,19 +285,9 @@
 <script type="text/javascript">
     function lightmode() {
         document.getElementById('csstheme').href = "stylesheets/bootstraplight.min.css";
-        var now = new Date();
-        var time = now.getTime();
-        var expireTime = time + 1000 * 36000;
-        now.setTime(expireTime);
-        document.cookie = "theme=light; expires=" + now.toGMTString() + "; path=/";
     }
     function darkmode() {
         document.getElementById('csstheme').href = "stylesheets/bootstrapdark.min.css";
-        var now = new Date();
-        var time = now.getTime();
-        var expireTime = time + 1000 * 36000;
-        now.setTime(expireTime);
-        document.cookie = "theme=dark	; expires=" + now.toGMTString() + "; path=/";
     }
 </script>
 
