--- a/views/index.ejs
+++ b/views/index.ejs
@@ -43,7 +43,7 @@
 
 </head>
 
-
+<script>category="<%=category%>";</script>
 <body ng-controller="content_controller" ng-init="init()">
 
 
@@ -264,9 +264,11 @@
         <div class="col-md-8" align="left">
             App by <a href="http://salmaan.me">Salmaan Pehlari</a> is a News Aggregator
             and Summarizer made just for you.
+
         </div>
         <div class="col-md-4" align="right">
             Contact him at salmaanpehlari[at]gmail[dot]com.
+            <p><a href="/about#changelog" target="_blank">Changelog</a></p>
             <br><br>
         </div>
 
