--- a/views/about.ejs
+++ b/views/about.ejs
@@ -162,6 +162,7 @@
             </div>
             <p> v1.1 - Jan 5th, 2017 </p>
             <div style="margin-left:2%">
+                <p> - Added changelog</p>
                 <p> - Can search through multiple pages. </p>
                 <p> - Theme persists on reload. </p>
                 <p> - Added routing. </p>
@@ -169,6 +170,13 @@
                 <a href="/technology" target="_blank">&#47;technology</a>,
                 <a href="/science" target="_blank">&#47;science</a>,
                 <a href="/india" target="_blank">&#47;india</a>
+                <p></p>
+            </div>
+            <p> v1.2 - Jan 10th, 2017 </p>
+            <div style="margin-left:2%">
+                <p> - Added unique pages for each article </p>
+                <p> - Added social media share links</p>
+                <p> - Changed button layout</p>
                 <p></p>
             </div>
             <p>TODO:</p>
