--- a/views/about.ejs
+++ b/views/about.ejs
@@ -29,6 +29,16 @@
 
     </script>
 
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "WebSite",
+        "name": "Fast News",
+        "alternateName": "News!",
+        "url": "http://www.fastnews.me"
+    }
+    </script>
+
 </head>
 <body style="font-family: 'Courier New'">
 <div>
