--- a/views/article.ejs
+++ b/views/article.ejs
@@ -124,6 +124,30 @@
 
 
 <div class="container" ng-show="hasContent && !loading">
+    <div itemscope itemtype="http://schema.org/NewsArticle">
+        <meta itemscope itemprop="mainEntityOfPage"  itemType="https://schema.org/WebPage" itemid="https://google.com/article"/>
+        <meta itemprop="headline" content="{{articleTitle}}">
+        <div itemprop="author" itemscope itemtype="https://schema.org/Person">
+            <meta itemprop="name" content="{{articleDomain}}">
+        </div>
+        <meta itemprop="description" content="{{articleSummary}}">
+        <div itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
+            <meta itemprop="url" content="/images/logo.png">
+            <meta itemprop="width" content="800">
+            <meta itemprop="height" content="800">
+        </div>
+        <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
+            <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
+                <meta itemprop="url" content="/images/logo.png">
+                <meta itemprop="width" content="600">
+                <meta itemprop="height" content="60">
+            </div>
+            <meta itemprop="name" content="{{articleDomain}}">
+        </div>
+        <meta itemprop="datePublished" content="{{articleDate}}"/>
+        <meta itemprop="dateModified" content="{{articleDate}}"/>
+
+    </div>
     <div style="text-align: center" id="articleHeading">
         <a target="_blank" style="text-decoration: none; color:inherit" href="{{articleURL}}"><h1
                     ng-bind="articleTitle"></h1></a>
