--- a/views/index.ejs
+++ b/views/index.ejs
@@ -184,20 +184,20 @@
                 </div>
                 <meta itemprop="description" content="{{content[item].summary}}">
                 <div itemprop="image" itemscope itemtype="https://schema.org/ImageObject">
-                    <meta itemprop="url" content="/images/logo.png">
+                    <meta itemprop="url" content="http://www.fastnews.me/logo">
                     <meta itemprop="width" content="800">
                     <meta itemprop="height" content="800">
                 </div>
                 <div itemprop="publisher" itemscope itemtype="https://schema.org/Organization">
                     <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                        <meta itemprop="url" content="/images/logo.png">
+                        <meta itemprop="url" content="http://www.fastnews.me/logo">
                         <meta itemprop="width" content="600">
                         <meta itemprop="height" content="60">
                     </div>
                     <meta itemprop="name" content="{{content[item].domain}}">
                 </div>
-                <meta itemprop="datePublished" content="{{content[item].date_added}}"/>
-                <meta itemprop="dateModified" content="{{content[item].date_added}}"/>
+                <meta itemprop="datePublished" content="{{content[item].date_added | date:'yyyy-MM-ddTHH:mm:ssZ'}}"/>
+                <meta itemprop="dateModified" content="{{content[item].date_added | date:'yyyy-MM-ddTHH:mm:ssZ'}}"/>
 
             </div>
 
