update meta and open graph content

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -38,7 +38,23 @@
         "url": "http://www.fastnews.me"
     }
     </script>
-
+    <meta name="description"
+          content="Why and how did I make Fast News?">
+    <meta name="keywords"
+          content="fastnews, fast, news, summarize, summarizer, summarized, aggregator, india, worldnews, technology, science">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="Salmaan Pehlari">
+    <meta name="revisit-after" content="1 day">
+    <meta name="language" content="english">
+    <meta property="og:url"           content="http://www.fastnews.me/about" />
+    <meta property="og:type"          content="website" />
+    <meta property="og:title"         content="About Fast News!" />
+    <meta property="og:description"   content="Why and how did I make Fast News?" />
+    <!--<meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />-->
+    <meta property="og:image" content="http://fastnews.me/logo" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
 </head>
 <body style="font-family: 'Courier New'">
 <div>
