--- a/views/article.ejs
+++ b/views/article.ejs
@@ -18,7 +18,10 @@
     <meta property="og:type"          content="website" />
     <meta property="og:title"         content="Fast News!" />
     <meta property="og:description"   content="Fast News gives you summarized news from the most popular and relevant news articles aggregated from the web in real time just for you." />
-
+    <meta property="og:image" content="http://fastnews.me/logo" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
 
     <link rel="stylesheet" href="/stylesheets/jquery.remodal.css">
 
