--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
     <meta name="description"
           content="Fast News gives you summarized news from the most popular and relevant news articles aggregated from the web in real time just for you.">
     <meta name="keywords"
-          content="fastnews, fast, news, summarize, summarizer, summarized, aggregator, india, worldnews, technology, science">
+          content="reddit, fastnews, fast, news, summarize, summarizer, summarized, aggregator, india, worldnews, technology, science">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Salmaan Pehlari">
     <meta name="revisit-after" content="1 day">
@@ -20,6 +20,10 @@
     <meta property="og:title"         content="Fast News!" />
     <meta property="og:description"   content="Fast News gives you summarized news from the most popular and relevant news articles aggregated from the web in real time just for you." />
     <!--<meta property="og:image"         content="http://www.your-domain.com/path/image.jpg" />-->
+    <meta property="og:image" content="http://fastnews.me/logo" />
+    <meta property="og:image:type" content="image/png" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="800" />
 
     <link rel="stylesheet" href="/stylesheets/jquery.remodal.css">
 
