--- a/views/article.ejs
+++ b/views/article.ejs
@@ -55,21 +55,38 @@
 
 </head>
 <body ng-controller="article_controller" ng-init="init()">
+<!--NAVBAR-->
 <nav id="nav" class="navbar navbar-inverse" role="navigation">
+
     <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+        <button type="button" class="navbar-toggle" data-toggle="collapse"
+                data-target="#bs-example-navbar-collapse-1">
             <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span
                     class="icon-bar"></span><span class="icon-bar"></span></button>
         <a class="navbar-brand" href="/">News!</a></div>
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" >
         <ul class="nav navbar-nav">
 
             <li ng-class="navbar_worldnews"><a href="/worldnews">World</a></li>
-            <li ng-class="navbar_technology"><a href="/technology">Technology</a></li>
-            <li ng-class="navbar_science"><a href="/science">Science</a></li>
+            <li ng-class="navbar_news"><a href="/news">United States</a></li>
             <li ng-class="navbar_india"><a href="/india">India</a></li>
+            <li ng-class="navbar_unitedkingdom"><a href="/unitedkingdom">United Kingdom</a></li>
+            <li ng-class="dropdownClass">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span ng-bind="dropdownText"></span> <strong class="caret"></strong></a>
+                <ul class="dropdown-menu">
+                    <li ng-class="navbar_europe"><a href="/europe">Europe</a></li>
+                    <li ng-class="navbar_canada"><a href="/canada">Canada</a></li>
+                    <li ng-class="navbar_china"><a href="/china">China</a></li>
+                    <li ng-class="navbar_science"><a href="/science">Science</a></li>
+                    <li ng-class="navbar_technology"><a href="/technology">Technology</a></li>
+                    <li ng-class="navbar_upliftingnews"><a href="/upliftingnews">Uplifting</a></li>
+                </ul>
+            </li>
 
         </ul>
+
+
+
         <ul class="nav navbar-nav navbar-right">
 
             <!--<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Settings<strong-->
@@ -93,6 +110,7 @@
             </li>
         </ul>
     </div>
+
 </nav>
 
 
