--- a/views/about.ejs
+++ b/views/about.ejs
@@ -154,7 +154,7 @@
             the following social media buttons<sup id="egg"
                                                    onmouseover="document.getElementById('hidden').style.display = 'block';"
                                                    onmouseout="document.getElementById('hidden').style.display = 'none';">*</sup>,
-            <span id="hidden" style="display:none;font-size:small;">Psst, he's also looking for internships</span></p>
+            <span id="hidden" style="display:none;font-size:small;"><del>Psst, he's also looking for internships</del><br>Hey, he actually did get an awesome internship!<br>Psst, he will be soon looking for fulltime opportunities</span></p>
 
 
         <ul class="social-buttons">
@@ -205,10 +205,27 @@
                 <p> - Changed button layout</p>
                 <p></p>
             </div>
+            <p> v1.3 - May 31st, 2017 </p>
+            <div style="margin-left:2%">
+                <p> - SEO stuff.</p>
+                <p> - Created structured data layout according to google's layout. Doesn't seem to be working though.</p>
+                <p> - Made the website scalable. <sup>(yes! for all of you 10 active users 🤗 )</sup></p>
+                <p> - Moved database to the cloud, added a loadbalancer to the mix and turned on autoscaling.</p>
+                <p> - Added new categories!</p>
+                - New routes are: <a href="/unitedstates" target="_blank">United States</a>,
+                <a href="/unitedkingdom" target="_blank">United Kingdom</a>,
+                <a href="/canada" target="_blank">Canada</a>,
+                <a href="/europe" target="_blank">Europe</a>,
+                <a href="/china" target="_blank">China</a>,
+                <a data- href="/upliftingnews" target="_blank">Uplifting News</a> <sup><span style="font-size: smaller">Could use a lot more of the last one</span></sup>
+                <p></p>
+            </div>
             <p>TODO:</p>
             <div style="margin-left:2%">
                 <p> - Add RSS Feeds </p>
                 <p> - Tweak UI </p>
+                <p> - Analyze data, use clustering algorithms for tagging. </p>
+                <p> - Implement better searching, I am thinking cosine similarity search, need to figure out how to set it up. </p>
             </div>
         </div>
 
